[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Images/LeftTriangle.bmp" type="Texture" id=1]
[ext_resource path="res://Game/Images/RightTriangle.bmp" type="Texture" id=2]
[ext_resource path="res://Game/Fonts/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/Scripts/SinglePlayerMenu.gd" type="Script" id=4]
[ext_resource path="res://Game/Fonts/OpenSans/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 5 )

[node name="SinglePlayerMenu" type="Control"]
anchor_left = 0.289
anchor_top = 0.457
anchor_right = 0.701
anchor_bottom = 0.83
margin_top = 0.415955
margin_right = -0.832031
margin_bottom = 0.039917
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinglePlayerLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.998
margin_left = 64.0
margin_top = 32.0
margin_right = -471.0
margin_bottom = -444.822
custom_fonts/font = SubResource( 1 )
text = "Single Player Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Control" parent="."]
anchor_top = 0.18
anchor_right = 0.56
anchor_bottom = 0.998
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -256.022
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="Level"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.0200043
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Level Select"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelName" type="Label" parent="Level"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0262794
margin_bottom = 0.0200043
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "test_track"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLeft" type="Button" parent="Level"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 88.0
margin_top = -0.0262794
margin_right = -333.0
margin_bottom = 27.02
grow_horizontal = 0
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelRight" type="Button" parent="Level"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 352.0
margin_top = -0.0262794
margin_right = -20.0
margin_bottom = 80.02
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laps" type="Control" parent="."]
anchor_top = 0.18
anchor_right = 0.56
anchor_bottom = 0.998
margin_left = 32.0
margin_top = 143.98
margin_right = -32.0
margin_bottom = -144.042
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapsLabel" type="Label" parent="Laps"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.0200043
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Number of Laps"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumLaps" type="Label" parent="Laps"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.97372
margin_bottom = 0.0200195
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapsDecrease" type="Button" parent="Laps"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 118.0
margin_top = -0.0262756
margin_right = -301.0
margin_bottom = 27.02
grow_horizontal = 0
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapsIncrease" type="Button" parent="Laps"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = -0.0262756
margin_right = -64.0
margin_bottom = 80.02
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCs" type="Control" parent="."]
anchor_top = 0.18
anchor_right = 0.56
anchor_bottom = 0.998
margin_left = 32.0
margin_top = 256.23
margin_right = -32.0
margin_bottom = -31.792
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCsLabel" type="Label" parent="NPCs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.0200043
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Number of NPCs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumNPCs" type="Label" parent="NPCs"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.97372
margin_bottom = 0.0200195
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCDecrease" type="Button" parent="NPCs"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 118.0
margin_top = -0.0262756
margin_right = -301.0
margin_bottom = 27.02
grow_horizontal = 0
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCIncrease" type="Button" parent="NPCs"]
anchor_top = 0.286
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = -0.0262756
margin_right = -64.0
margin_bottom = 80.02
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="GridContainer" parent="."]
anchor_left = 0.561
anchor_top = 0.18
anchor_right = 1.0
anchor_bottom = 1.001
margin_left = 0.76886
margin_top = 314.386
margin_right = -63.8879
margin_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/vseparation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceButton" type="Button" parent="Buttons"]
margin_right = 398.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
action_mode = 0
text = "Race"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Level/LevelLeft" to="." method="_level_select_left"]
[connection signal="button_down" from="Level/LevelRight" to="." method="_level_select_right"]
[connection signal="pressed" from="Laps/LapsDecrease" to="." method="_decrease_lap_amount"]
[connection signal="pressed" from="Laps/LapsIncrease" to="." method="_increase_lap_amount"]
[connection signal="button_down" from="NPCs/NPCDecrease" to="." method="_decrease_NPC_amount"]
[connection signal="button_down" from="NPCs/NPCIncrease" to="." method="_increase_NPC_amount"]
[connection signal="pressed" from="Buttons/RaceButton" to="." method="_start_race"]
